--- a/aboutme.html
+++ b/aboutme.html
@@ -1,75 +1,325 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>О себе</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-<nav style="nav-left: auto">
+<nav style="nav-left: auto; position: sticky; top: 0;">
     <div class="nav-menu">
         <ul>
             <li class="menu-link">
-                <a href="aboutme.html">О себе</a>
+                <a href="#myself">О себе</a>
+            </li>
+
+            <!--            <li class="menu-link">-->
+            <!--                <a href="html/education.html">Образование</a>-->
+            <!--            </li>-->
+            <li class="menu-link">
+                <a href="#skills">Мои навыки</a>
             </li>
             <li class="menu-link">
-                <a href="html/family.html">Моя семья</a>
+                <a href="#projects">Мои Pet-проекты</a>
             </li>
             <li class="menu-link">
-                <a href="html/education.html">Образование</a>
+                <a href="#achievements">Мои достижения</a>
             </li>
-            <li class="menu-link">
-                <a href="html/hobby.html">Увлечения, хобби</a>
-            </li>
-            <li class="menu-link">
-                <a href="html/achievements.html">Мои достижения</a>
-            </li>
-            <li class="menu-link">
-                <a href="html/session.html">Успеваемость</a>
-            </li>
+
         </ul>
     </div>
 </nav>
 
 
-<h1 class="page-header" style="margin-right: 30%">
-    Синицын Максим Евгеньевич
-</h1>
+<div class="page-header-container">
+    <h1 id="myself" class="page-header">
+        Синицын Максим Евгеньевич
+    </h1>
+</div>
 
-<img class="photo" src="img/my_photo.png" style="float: right;" alt="Здесь должно быть фото!">
+<!--карточка-->
+<div style="margin-bottom: 20pt; padding: 0 15%; margin-top: 10pt">
+    <div class="card">
+        <div style="float: right;">
+            <img class="pht" src="img/my_photo.png" alt="Здесь должно быть фото!"
+                 style="height: 250pt; margin-bottom: 10pt">
+            <div class="container">
+                <h4>Java Backend Developer</h4>
+            </div>
+        </div>
 
-<hr>
-<h2 style="text-align: center">Я начинающий Java Backend-разработчик! Это моё портфолио!</h2>
-<hr>
+        <p class="p-margin">
+            <b>Дата рождения:</b> 30.04.2002
+        </p>
+        <p class="p-margin">
+            <b>Гражданство:</b> Россия
+        </p>
 
-<h3 style="text-align: center;">
-    <u>Данные для резюме</u>
-</h3>
+        <p class="p-margin">
+            <b>Место жительства:</b> г. Самара
+        </p>
 
-<p>
-    Дата рождения: 30.04.2002
+        <p class="p-margin"><b>Образование:</b> <span style="text-decoration: line-through;">получаю</span> высшее</p>
+
+        <p class="p-margin">
+            <b>Опыт программирования:</b> 4 года
+        </p>
+
+
+        <p class="p-margin">
+            <b>E-mail:</b>
+            <a href="mailto:sinitsynme@outlook.com" target="_blank" class="link">sinitsynme@outlook.com</a>
+        </p>
+
+        <p class="p-margin">
+            <b>Telegram:</b>
+            <a href="https://t.me/sinitsynme" target="_blank" class="link">sinitsynme</a>
+        </p>
+
+        <p class="p-margin">
+            <b>Github:</b>
+            <a href="https://github.com/sinitsynme" target="_blank" class="link">sinitsynme</a>
+        </p>
+
+
+        <hr>
+    </div>
+
+
+</div>
+
+<div>
+    <div class="page-header-container">
+        <h1 id="skills" class="page-header">
+            Мои навыки
+        </h1>
+    </div>
+
+    <table>
+        <tbody>
+        <tr>
+            <td style="text-align: center">
+                <img class="badge" alt="Java"
+                     src="https://img.shields.io/badge/java-%23ED8B00.svg?style=for-the-badge&logo=java">
+            </td>
+            <td>
+                <span>Мой основной язык программирования. Работаю на нем в течение 3 лет </span>
+            </td>
+        </tr>
+        <tr>
+            <td style="text-align: center">
+                <img class="badge" alt="Python"
+                     src="https://img.shields.io/badge/python-3670A0?style=for-the-badge&logo=python&logoColor=ffdd54">
+            </td>
+            <td>
+                <p class="p-margin-left">Использую для быстрого решения алгоритмических задач (4 года).</p>
+                <p class="p-margin-left">Преподаю основы программирования для школьников на Python</p>
+            </td>
+        </tr>
+
+        <tr>
+            <td style="text-align: center">
+                <img class="badge" alt="Spring"
+                     src="https://img.shields.io/badge/spring-%236DB33F.svg?style=for-the-badge&logo=spring&logoColor=white">
+            </td>
+            <td>
+                <span>Фреймворк, с помощью которого поддерживаю DI в проектах (2 года)</span>
+            </td>
+        </tr>
+
+
+        <tr>
+            <td style="text-align: center">
+                <img class="badge" alt="Hibernate"
+                     src="https://img.shields.io/badge/Hibernate-59666C?style=for-the-badge&logo=Hibernate&logoColor=white">
+            </td>
+            <td>
+                <span>ORM, с которой я работаю 2 года</span>
+            </td>
+        </tr>
+        <tr>
+            <td style="text-align: center">
+                <p><img class="badge" alt="Postgres"
+                        src="https://img.shields.io/badge/postgres-%23316192.svg?style=for-the-badge&logo=postgresql&logoColor=white">
+                </p>
+                <p><img class="badge" alt="MS SQL"
+                        src="https://img.shields.io/badge/Microsoft%20SQL%20Server-CC2927?style=for-the-badge&logo=microsoft%20sql%20server&logoColor=white">
+                </p>
+                <p><img class="badge" alt="MySQL"
+                        src="https://img.shields.io/badge/mysql-%2300f.svg?style=for-the-badge&logo=mysql&logoColor=black">
+                </p>
+
+            </td>
+            <td>
+                <span>СУБД, с которыми я работаю 2 года </span>
+            </td>
+        </tr>
+        <tr>
+            <td style="text-align: center">
+                <img class="badge" alt="Thymeleaf"
+                     src="https://img.shields.io/badge/Thymeleaf-%23005C0F.svg?style=for-the-badge&logo=Thymeleaf&logoColor=white">
+
+            </td>
+            <td>
+            <span>Так как пока что не обладаю знаниями Frontend-фреймворков, использую Thymeleaf
+        для создания динамических веб-страниц</span>
+            </td>
+        </tr>
+        <tr>
+            <td style="text-align: center">
+                <p>
+                    <img class="badge" alt="HTML5"
+                         src="https://img.shields.io/badge/html5-%23E34F26.svg?style=for-the-badge&logo=html5&logoColor=white">
+                </p>
+                <p>
+                    <img class="badge" alt="JavaScript"
+                         src="https://img.shields.io/badge/javascript-%23323330.svg?style=for-the-badge&logo=javascript&logoColor=%23F7DF1E">
+                </p>
+                <p>
+                    <img class="badge" alt="CSS"
+                         src="https://img.shields.io/badge/css3-%231572B6.svg?style=for-the-badge&logo=css3&logoColor=white">
+                </p>
+            </td>
+            <td>
+                <span>Знаю технологии фронтенда на уровне, который необходим backend-программисту. Написал на них сайт, который вы наблюдаете </span>
+            </td>
+        </tr>
+
+        <tr>
+            <td style="text-align: center">
+                <img class="badge" alt="Ubuntu"
+                     src="https://img.shields.io/badge/Ubuntu-E95420?style=for-the-badge&logo=ubuntu&logoColor=white">
+            </td>
+            <td>
+                <span>Знаю основы работы в Ubuntu. Настраивал локальный сервер DokuWiki на Ubuntu для проекта из университета.</span>
+            </td>
+        </tr>
+
+        <tr>
+            <td style="text-align: center">
+                <img class="badge" alt="Trello"
+                     src="https://img.shields.io/badge/Trello-%23026AA7.svg?style=for-the-badge&logo=Trello&logoColor=white">
+
+            </td>
+            <td>
+            <span>Умею работать в досках управления проектами (Trello, Kaiten). Получал практику в рамках дополнительного образования
+        по программе "Управление IT-проектами"</span>
+            </td>
+        </tr>
+
+
+        </tbody>
+    </table>
+</div>
+
+
+<div>
+    <div class="page-header-container">
+        <h1 id="projects" class="page-header">
+            Мои Pet-проекты
+        </h1>
+    </div>
+
+    <div class="project-card" style="margin-bottom: 20pt">
+        <img class="project-pht" src="img/analyticspro.png" alt="AnalyticsPro">
+
+        <h2>AnalyticsPro - Web-приложение для аналитики</h2>
+
+        <p>Проект, разработанный в рамках олимпиады Волга-IT’22.</p>
+
+        <p><b>Стек: </b><i>Java - Spring Boot – Thymeleaf.</i></p>
+
+        <p>Система предназначена для аналитики событий, происходящих в
+            пользовательских приложениях</p>
+
+        <p> Подключение к системе осуществляется через API, на который приложения могут
+            высылать свои типы event-ов для их отслеживания.</p>
+
+        <div style="text-align: center">
+            <a class="link" target="_blank" href="https://github.com/sinitsynme/AutocompletingLibrary">Ссылка на
+                GitHub</a>
+        </div>
+
+    </div>
+
+    <div class="project-card" style="margin-bottom: 20pt">
+        <img class="project-pht" src="img/autocomp.png" alt="Autocompleting Library">
+
+        <h2>AutocompletingLibrary - Движок автодополнения</h2>
+
+        <p>Поисковая библиотека, основанная на префиксном дереве (боре).</p>
+
+        <p><b>Стек: </b><i>Java - Maven</i></p>
+
+
+        <p>Консольное приложение, созданное для этой библиотеки, обрабатывает поиковую базу в виде CSV-файла
+            и может искать текст по фиксированному столбцу.
+        </p>
+
+        <p> В приложение встроен тестовый файл airports.csv, который позволяет осуществлять поиск аэропортов по
+            названию,
+            городу, коду аэропорта, его координатам.</p>
+
+        <div style="text-align: center">
+            <a class="link" target="_blank" href="https://github.com/sinitsynme/AutocompletingLibrary">Ссылка на
+                GitHub</a>
+        </div>
+
+    </div>
+
+</div>
+
+<div>
+    <div class="page-header-container">
+        <h1 id="achievements" class="page-header">
+            Мои достижения
+        </h1>
+    </div>
+
+    <ul>
+        <li class="li-margin">
+            <p>В 2019 году сдал международный экзамен First Certificate In English, подтвердив уровень
+                B2 (Upper Intermediate)</p>
+        </li>
+
+        <li class="li-margin">
+            <p>Прошёл стажировку в компании SimbirSoft в 2021 году с приглашением в компанию на должность "Java Junior
+                Developer"</p>
+        </li>
+
+        <li class="li-margin">
+            <p>Занял 2 место на Международной олимпиаде Волга-IT'22 по направлению "Прикладное программирование на
+                Java/C#</p>
+        </li>
+
+        <li class="li-margin">
+            <p>В 2021 году прошел дополнительное образование в АНО ВО "Университет Сириус" по программе
+                "Формальная верификация и дизайн программного обеспечения"</p>
+        </li>
+
+    </ul>
+
+    <div class="project-card" style="margin-bottom: 20pt; text-align: center ;">
+        <a href="img/fce.png" target="_blank"><img class="center-img" style="width: 20%;" src="img/fce.png" alt="FCE Certificate"></a>
+        <a href="img/sirius.png" target="_blank"><img class="center-img" style="width: 20%;" src="img/sirius.png" alt="Sirius Certificate"></a>
+        <a href="img/volgait.png" target="_blank"><img class="center-img" style="width: 20%;" src="img/volgait.png" alt="Volga-IT'22"></a>
+    </div>
+</div>
+
+
+<p class="p-footer">
+    <b id="foot"></b>
 </p>
-<p>
-    Гражданство: Россия
-</p>
-<p>
-    Семейное положение: не женат
-</p>
-<p>
-    Место жительства: г. Самара
-</p>
 
-<br>
-
-<p>
-    Телефон: +7(917)147-63–33
-
-</p>
-<p>
-    E-mail:
-    <a href="mailto:sinitsynme@outlook.com">sinitsynme@outlook.com</a>
-</p>
 
 </body>
 </html>
+
+<script>
+    document.querySelector('#foot').textContent = "© " + new Date().getFullYear() + " Maxim Sinitsyn"
+
+</script>
+
+
+
