Little changes in design

--- a/index.html
+++ b/index.html
@@ -4,31 +4,28 @@
     <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>CV | SinitsynME</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="shortcut icon" href="/img/laptop.png" type="image/png">
 </head>
 <body>
 
-<div style="position: sticky; top: 0;">
-    <nav style="nav-left: auto; position: sticky; top: 0;">
-        <div class="nav-menu">
-            <ul>
-                <li class="menu-link">
-                    <a href="#myself">О себе</a>
-                </li>
-                <li class="menu-link">
-                    <a href="#skills">Мои навыки</a>
-                </li>
-                <li class="menu-link">
-                    <a href="#projects">Мои Pet-проекты</a>
-                </li>
-                <li class="menu-link">
-                    <a href="#achievements">Мои достижения</a>
-                </li>
+<nav style="nav-left: auto; position: sticky; top: 0;">
+    <div class="nav-menu">
+        <ul>
+            <li class="menu-link">
+                <a href="#myself">О себе</a>
+            </li>
+            <li class="menu-link">
+                <a href="#skills">Мои навыки</a>
+            </li>
+            <li class="menu-link">
+                <a href="#projects">Мои Pet-проекты</a>
+            </li>
+            <li class="menu-link">
+                <a href="#achievements">Мои достижения</a>
+            </li>
 
-            </ul>
-        </div>
-    </nav>
-</div>
+        </ul>
+    </div>
+</nav>
 
 
 <div class="page-header-container">
@@ -103,11 +100,7 @@
                      src="https://img.shields.io/badge/java-%23ED8B00.svg?style=for-the-badge&logo=java">
             </td>
             <td>
-                <p class="p-margin">Мой основной язык программирования. Работаю с ним в течение 3 лет.</p>
-                <p class="p-margin">▶ Java 8, Java 11. Java Core, Java Collections Framework. Основы тестирования на
-                    JUnit.</p>
-                <p class="p-margin">▶ Используемые средства сборки: Maven, Gradle (для Android)</p>
-
+                <span>Мой основной язык программирования. Работаю на нем в течение 3 лет </span>
             </td>
         </tr>
         <tr>
@@ -116,9 +109,8 @@
                      src="https://img.shields.io/badge/python-3670A0?style=for-the-badge&logo=python&logoColor=ffdd54">
             </td>
             <td>
-                <p class="p-margin">Использую для быстрого решения задач на алгоритмы и структуры данных (4 года).</p>
-                <p class="p-margin">Преподаю основы программирования для школьников на Python.</p>
-                <p class="p-margin">Знаю основы устройства нейронных сетей и машинного обучения.</p>
+                <p class="p-margin-left">Использую для быстрого решения алгоритмических задач (4 года).</p>
+                <p class="p-margin-left">Преподаю основы программирования для школьников на Python</p>
             </td>
         </tr>
 
@@ -128,9 +120,7 @@
                      src="https://img.shields.io/badge/spring-%236DB33F.svg?style=for-the-badge&logo=spring&logoColor=white">
             </td>
             <td>
-                <p class="p-margin">Использую Spring в своих проектах 2 года.</p>
-                <p class="p-margin">▶ Spring Framework, Spring MVC, Spring Boot, Spring Data JPA, Spring Security</p>
-                <p class="p-margin">В разное время использовал Java config, XML config</p>
+                <span>Фреймворк, с помощью которого поддерживаю DI в проектах (2 года)</span>
             </td>
         </tr>
 
@@ -141,7 +131,7 @@
                      src="https://img.shields.io/badge/Hibernate-59666C?style=for-the-badge&logo=Hibernate&logoColor=white">
             </td>
             <td>
-                <p class="p-margin">ORM, используемая мной в проектах (2 года).</p>
+                <span>ORM, с которой я работаю 2 года</span>
             </td>
         </tr>
         <tr>
@@ -157,18 +147,9 @@
                 </p>
 
             </td>
-
             <td>
-                <p class="p-margin">СУБД, с которыми я работаю:</p>
-                <p class="p-margin">▶ PostgreSQL - 2 года.</p>
-                <p class="p-margin">▶ MS SQL Server - 1 год</p>
-                <p class="p-margin">▶ MySQL (в том числе проектирование в Workbench) - 1 год</p>
-                <p class="p-margin">Имею знания об организации данных в реляционных БД, нормализации/денормализации
-                    данных,
-                    представлениях, индексах, транзакциях и уровнях их изоляции.
-                </p>
+                <span>СУБД, с которыми я работаю 2 года </span>
             </td>
-
         </tr>
         <tr>
             <td style="text-align: center">
@@ -177,8 +158,8 @@
 
             </td>
             <td>
-                <p class="p-margin">Использую Thymeleaf для создания динамических Web-страниц
-                    со связкой с Spring Boot и Spring Security</p>
+            <span>Так как пока что не обладаю знаниями Frontend-фреймворков, использую Thymeleaf
+        для создания динамических веб-страниц</span>
             </td>
         </tr>
         <tr>
@@ -197,8 +178,7 @@
                 </p>
             </td>
             <td>
-                <p class="p-margin">Знаю технологии фронтенда на уровне, который необходим backend-программисту.</p>
-                <p class="p-margin">▶ Написал на них статический сайт, который вы наблюдаете</p>
+                <span>Знаю технологии фронтенда на уровне, который необходим backend-программисту. Написал на них сайт, который вы наблюдаете </span>
             </td>
         </tr>
 
@@ -208,8 +188,7 @@
                      src="https://img.shields.io/badge/Ubuntu-E95420?style=for-the-badge&logo=ubuntu&logoColor=white">
             </td>
             <td>
-                <p class="p-margin">Знаю основы работы в Ubuntu. </p>
-                <p class="p-margin">Настраивал локальный сервер DokuWiki на Ubuntu для проекта из университета.</p>
+                <span>Знаю основы работы в Ubuntu. Настраивал локальный сервер DokuWiki на Ubuntu для проекта из университета.</span>
             </td>
         </tr>
 
@@ -220,11 +199,11 @@
 
             </td>
             <td>
-                <p class="p-margin">Умею работать в досках управления проектами (Trello, Kaiten)</p>
-                <p class="p-margin">Получаю практику их использования в рамках дополнительного образования
-                    по программе "Управление IT-проектами"</p>
+            <span>Умею работать в досках управления проектами (Trello, Kaiten). Получал практику в рамках дополнительного образования
+        по программе "Управление IT-проектами"</span>
             </td>
         </tr>
+
 
         </tbody>
     </table>
@@ -247,14 +226,14 @@
 
         <p><b>Стек: </b><i>Java - Spring Boot – Thymeleaf.</i></p>
 
-        <p>▶ Система предназначена для аналитики событий, происходящих в
+        <p>Система предназначена для аналитики событий, происходящих в
             пользовательских приложениях</p>
 
-        <p>▶ Подключение к системе осуществляется через API, на который приложения могут
+        <p> Подключение к системе осуществляется через API, на который приложения могут
             высылать свои типы event-ов для их отслеживания.</p>
 
-        <div style="text-align: center; margin-top: 40pt; margin-bottom: 20pt">
-            <a class="link" target="_blank" href="https://github.com/sinitsynme/AnalyticsPro">Ссылка на
+        <div style="text-align: center">
+            <a class="link" target="_blank" href="https://github.com/sinitsynme/AutocompletingLibrary">Ссылка на
                 GitHub</a>
         </div>
 
@@ -270,15 +249,15 @@
         <p><b>Стек: </b><i>Java - Maven</i></p>
 
 
-        <p>▶ Консольное приложение, созданное для этой библиотеки, обрабатывает поиковую базу в виде CSV-файла
-            и может искать текст по фиксированному столбцу, используя префикс, введённый пользователем.
+        <p>Консольное приложение, созданное для этой библиотеки, обрабатывает поиковую базу в виде CSV-файла
+            и может искать текст по фиксированному столбцу.
         </p>
 
-        <p>▶ В приложение встроен тестовый файл airports.csv, который позволяет осуществлять поиск аэропортов по
+        <p> В приложение встроен тестовый файл airports.csv, который позволяет осуществлять поиск аэропортов по
             названию,
             городу, коду аэропорта, его координатам.</p>
 
-        <div style="text-align: center; margin-top: 50pt; margin-bottom: 20pt">
+        <div style="text-align: center">
             <a class="link" target="_blank" href="https://github.com/sinitsynme/AutocompletingLibrary">Ссылка на
                 GitHub</a>
         </div>
@@ -296,8 +275,8 @@
 
     <ul>
         <li class="li-margin">
-            <p>В 2019 году сдал международный экзамен по английскому языку Cambridge First Certificate In English,
-                подтвердив уровень B2 (Upper Intermediate)</p>
+            <p>В 2019 году сдал международный экзамен First Certificate In English, подтвердив уровень
+                B2 (Upper Intermediate)</p>
         </li>
 
         <li class="li-margin">
@@ -306,20 +285,13 @@
         </li>
 
         <li class="li-margin">
-            <p>В 2021 году прошел дополнительное образование в АНО ВО "Университет Сириус" (фед. территория Сириус) по программе
-                "Формальная верификация и дизайн программного обеспечения"</p>
-        </li>
-
-        <li class="li-margin">
             <p>Занял 2 место на Международной олимпиаде Волга-IT'22 по направлению "Прикладное программирование на
-                Java/C#, в рамках которой за 7 часов был создано Web-приложение - API торговой площадки с возможностью
-                хранения на сервере медиафайлов с различными ограничениями.</p>
+                Java/C#</p>
         </li>
 
         <li class="li-margin">
-            <p>С февраля по май 2023 года проходил курс "Алгоритмы и структуры данных для студентов" от Тинькофф Образование.
-                Успешно сдал финальный экзамен
-            </p>
+            <p>В 2021 году прошел дополнительное образование в АНО ВО "Университет Сириус" по программе
+                "Формальная верификация и дизайн программного обеспечения"</p>
         </li>
 
     </ul>
@@ -332,8 +304,6 @@
                                                           alt="Sirius Certificate"></a>
             <a href="img/volgait.png" target="_blank"><img class="center-img" style="width: 20%;" src="img/volgait.png"
                                                            alt="Volga-IT'22"></a>
-            <a href="img/tinkoff_aisd.png" target="_blank"><img class="center-img" style="width: 30%;" src="img/tinkoff_aisd.png"
-                                                           alt="Tinkoff AiSD"></a>
         </div>
     </div>
 </div>
