Change margins of links

--- a/index.html
+++ b/index.html
@@ -252,8 +252,8 @@
         <p>▶ Подключение к системе осуществляется через API, на который приложения могут
             высылать свои типы event-ов для их отслеживания.</p>
 
-        <div style="text-align: center">
-            <a class="link" target="_blank" href="https://github.com/sinitsynme/AutocompletingLibrary">Ссылка на
+        <div style="text-align: center; margin-top: 40pt; margin-bottom: 20pt">
+            <a class="link" target="_blank" href="https://github.com/sinitsynme/AnalyticsPro">Ссылка на
                 GitHub</a>
         </div>
 
@@ -277,7 +277,7 @@
             названию,
             городу, коду аэропорта, его координатам.</p>
 
-        <div style="text-align: center">
+        <div style="text-align: center; margin-top: 50pt; margin-bottom: 20pt">
             <a class="link" target="_blank" href="https://github.com/sinitsynme/AutocompletingLibrary">Ссылка на
                 GitHub</a>
         </div>
