--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>CV | SinitsynME</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="/img/laptop.png" type="image/png">
 </head>
 <body>
 
