Add Tinkoff certificate

--- a/index.html
+++ b/index.html
@@ -316,6 +316,12 @@
                 хранения на сервере медиафайлов с различными ограничениями.</p>
         </li>
 
+        <li class="li-margin">
+            <p>С февраля по май 2023 года проходил курс "Алгоритмы и структуры данных для студентов" от Тинькофф Образование.
+                Успешно сдал финальный экзамен
+            </p>
+        </li>
+
     </ul>
 
     <div style="padding: 0 5%">
@@ -326,6 +332,8 @@
                                                           alt="Sirius Certificate"></a>
             <a href="img/volgait.png" target="_blank"><img class="center-img" style="width: 20%;" src="img/volgait.png"
                                                            alt="Volga-IT'22"></a>
+            <a href="img/tinkoff_aisd.png" target="_blank"><img class="center-img" style="width: 30%;" src="img/tinkoff_aisd.png"
+                                                           alt="Tinkoff AiSD"></a>
         </div>
     </div>
 </div>
