Add english version

--- a/ru.html
+++ b/ru.html
@@ -11,20 +11,20 @@
     <div class="nav-menu">
         <ul>
             <li class="menu-link">
-                <a href="#myself">About myself</a>
+                <a href="#myself">О себе</a>
             </li>
             <li class="menu-link">
-                <a href="#skills">My skills</a>
+                <a href="#skills">Мои навыки</a>
             </li>
             <li class="menu-link">
-                <a href="#projects">My Pet projects</a>
+                <a href="#projects">Мои Pet-проекты</a>
             </li>
             <li class="menu-link">
-                <a href="#achievements">My achievements</a>
+                <a href="#achievements">Мои достижения</a>
             </li>
 
             <li class="menu-link" style="margin-left: 400px">
-                <a href="ru.html">RU</a>
+                <a href="index.html">EN</a>
             </li>
 
         </ul>
@@ -34,7 +34,7 @@
 
 <div class="page-header-container">
     <h1 id="myself" class="page-header">
-        Maksim Sinitsyn
+        Синицын Максим Евгеньевич
     </h1>
 </div>
 
@@ -49,21 +49,21 @@
         </div>
 
         <p class="p-margin">
-            <b>Age:</b> <span id="lifetimeYears"></span>
+            <b>Возраст:</b> <span id="lifetimeYears"></span>
         </p>
 
         <p class="p-margin">
-            <b>Venue:</b> <span>Samara, Russia</span>
+            <b>Место жительства:</b> <span>Россия, г. Самара </span>
         </p>
 
-        <p class="p-margin"><b>Education:</b> <span>2024 - Higher, Bachelor in IT</span></p>
+        <p class="p-margin"><b>Образование:</b> <span>высшее, бакалавриат</span></p>
 
         <p class="p-margin">
-            <b>Programming experience:</b> <span id="experienceYears"></span>
+            <b>Опыт в программировании:</b> <span id="experienceYears"></span>
         </p>
 
         <p class="p-margin">
-            <b>Work experience:</b> <span id="workYears"></span>
+            <b>Опыт работы:</b> <span id="workYears"></span>
         </p>
 
         <hr>
@@ -97,7 +97,7 @@
 <div>
     <div class="page-header-container">
         <h1 id="skills" class="page-header">
-            My skills
+            Мои навыки
         </h1>
     </div>
 
@@ -109,7 +109,7 @@
                      src="https://img.shields.io/badge/Java-ED8B00?style=for-the-badge&logo=openjdk&logoColor=white">
             </td>
             <td>
-                <span>My base programming language. Use it for 4 years</span>
+                <span>Основной язык программирования. Работаю на нем в течение 4 лет </span>
             </td>
         </tr>
         <tr>
@@ -118,7 +118,7 @@
                      src="https://img.shields.io/badge/Kotlin-7F52FF?style=for-the-badge&logo=Kotlin&logoColor=white">
             </td>
             <td>
-                <span>Additional programming language, use it at work</span>
+                <span>Дополнительный язык программирования. Использую в работе </span>
             </td>
         </tr>
         <tr>
@@ -129,7 +129,7 @@
                             src="https://img.shields.io/badge/Apache%20Maven-C71A36?style=for-the-badge&logo=Apache%20Maven&logoColor=white">
             </td>
             <td>
-                <span>Build tools for JVM</span>
+                <span>Системы сборки для JVM-проектов</span>
             </td>
         </tr>
         <tr>
@@ -138,9 +138,9 @@
                      src="https://img.shields.io/badge/python-3670A0?style=for-the-badge&logo=python&logoColor=ffdd54">
             </td>
             <td>
-                <p class="p-margin-left"><span>Use it for quick scripts writing and solving algo issues</span></p>
+                <p class="p-margin-left"><span>Использую для быстрого написания скриптов и решения алгоритмических задач (4 года)</span></p>
                 <p class="p-margin-left">
-                    <span>Taught basics of programming for high school students for 1 year</span></p>
+                    <span>Преподавал основы программирования для школьников на Python (1 год)</span></p>
             </td>
         </tr>
 
@@ -150,7 +150,7 @@
                      src="https://img.shields.io/badge/spring-%236DB33F.svg?style=for-the-badge&logo=spring&logoColor=white">
             </td>
             <td>
-                <span>Use Spring Boot and Spring Cloud at work</span>
+                <span>Использую Spring Boot и Spring Cloud в работе</span>
             </td>
         </tr>
 
@@ -161,7 +161,7 @@
                      src="https://img.shields.io/badge/Apache_Kafka-231F20?style=for-the-badge&logo=apache-kafka&logoColor=white">
             </td>
             <td>
-                <span>Know basics of Apache Kafka</span>
+                <span>Знаю основы Apache Kafka</span>
             </td>
         </tr>
 
@@ -171,7 +171,7 @@
                      src="https://shorturl.at/XkLhi">
             </td>
             <td>
-                <span>Masterfully use Camunda BPM</span>
+                <span>Уверенно работаю с Camunda BPM</span>
             </td>
         </tr>
 
@@ -181,7 +181,7 @@
                      src="https://img.shields.io/badge/docker-257bd6?style=for-the-badge&logo=docker&logoColor=white">
             </td>
             <td>
-                <span>Masterfully use Docker</span>
+                <span>Уверенно работаю с Docker</span>
             </td>
         </tr>
         <tr>
@@ -199,7 +199,7 @@
 
             </td>
             <td>
-                <span>DBMS which I use in my projects</span>
+                <span>СУБД, с которыми работал</span>
             </td>
         </tr>
         <tr>
@@ -222,7 +222,7 @@
                 </p>
             </td>
             <td>
-                <span>Know some basics of Frontend, able to develop easy websites</span>
+                <span>Знаю основы фронтенда, умею разрабатывать несложные сайты</span>
             </td>
         </tr>
 
@@ -235,7 +235,7 @@
             </td>
 
             <td>
-                <span>Able to work in project management systems</span>
+                <span>Умею работать в системах управления проектами.</span>
             </td>
         </tr>
 
@@ -248,30 +248,30 @@
 <div>
     <div class="page-header-container">
         <h1 id="projects" class="page-header">
-            My Pet projects
+            Мои Pet-проекты
         </h1>
     </div>
 
     <div class="project-card" style="margin-bottom: 20pt">
         <img class="project-pht" src="img/c4-b2b.drawio.png" alt="B2B-platform">
 
-        <h2>SkladLine - B2B-platform for wholesale purchases</h2>
+        <h2>СкладЛайн - B2B-платформа для оптовых закупок</h2>
 
-        <p>Project developed during final Bachelor assessment</p>
+        <p>Проект, разработанный в рамках ВКР бакалавра.</p>
 
-        <p><b>Backend stack </b><i>Java - Gradle - Spring Boot - Spring Cloud – Docker - PostgreSQL - S3</i></p>
-        <p><b>Frontend stack </b><i>Vue.js - Bootstrap - Axios - Nominatim API - Leaflet.js</i></p>
+        <p><b>Backend стек </b><i>Java - Gradle - Spring Boot - Spring Cloud – Docker - PostgreSQL - S3</i></p>
+        <p><b>Frontend стек </b><i>Vue.js - Bootstrap - Axios - Nominatim API - Leaflet.js</i></p>
 
-        <p>Platform is developed for creating and processing orders of goods</p>
-        <p>There is MVP of functionality of consumers, producers and administrators</p>
-        <p>The application is based on microservices architecture. Architecture is in the picture</p>
+        <p>Платформа предназначена для оформления и выполнения оптовых заказов на товары</p>
+        <p>Реализован MVP функционала потребителей, поставщиков и администраторов</p>
+        <p>Приложение основано на микросервисной архитектуре. Архитектура представлена на картинке</p>
 
-        <p>Changes of the architecture of the system are planned due to data-intensive application development plans</p>
+        <p>Планируется доработать систему с учетом принципов проектирования высоконагруженных приложений</p>
 
         <div class="link-block">
-            <a class="link" target="_blank" href="https://github.com/sinitsynme/logist-api">
+            <a class="link" target="_blank" href="https://github.com/sinitsynme/logist-api">Ссылка на
                 GitHub [Backend]</a> |
-            <a class="link" target="_blank" href="https://github.com/sinitsynme/logist-api-frontend">
+            <a class="link" target="_blank" href="https://github.com/sinitsynme/logist-api-frontend">Ссылка на
                 GitHub [Frontend]</a>
         </div>
 
@@ -280,18 +280,20 @@
     <div class="project-card" style="margin-bottom: 20pt">
         <img class="project-pht" src="img/analyticspro.png" alt="AnalyticsPro">
 
-        <h2>AnalyticsPro - Web-application for analytics</h2>
+        <h2>AnalyticsPro - Web-приложение для аналитики</h2>
 
-        <p>Project, developed during Волга-IT’22 championship.</p>
+        <p>Проект, разработанный в рамках олимпиады Волга-IT’22.</p>
 
-        <p><b>Stack: </b><i>Java - Spring Boot – Thymeleaf.</i></p>
+        <p><b>Стек: </b><i>Java - Spring Boot – Thymeleaf.</i></p>
 
-        <p>The system is intended to collect and aggregate analytics events of registered applications</p>
+        <p>Система предназначена для аналитики событий, происходящих в
+            пользовательских приложениях</p>
 
-        <p> The target analysed system is connected via API, with which it can send event information.</p>
+        <p> Подключение к системе осуществляется через API, на который приложения могут
+            высылать свои типы event-ов для их отслеживания.</p>
 
         <div class="link-block">
-            <a class="link" target="_blank" href="https://github.com/sinitsynme/AnalyticsPro">
+            <a class="link" target="_blank" href="https://github.com/sinitsynme/AnalyticsPro">Ссылка на
                 GitHub</a>
         </div>
 
@@ -300,21 +302,23 @@
     <div class="project-card" style="margin-bottom: 20pt">
         <img class="project-pht" src="img/autocomp.png" alt="Autocompleting Library">
 
-        <h2>AutocompletingLibrary - Basic autocompleting engine</h2>
+        <h2>AutocompletingLibrary - Движок автодополнения</h2>
 
-        <p>Search engine, based on a prefix tree.</p>
+        <p>Поисковая библиотека, основанная на префиксном дереве (боре).</p>
 
-        <p><b>Stack: </b><i>Java - Maven</i></p>
+        <p><b>Стек: </b><i>Java - Maven</i></p>
 
 
-        <p>Console app, which was developed for this library, processes the search data in CSV-file
-            and can search in the fixed column. Input is done by the arguments of CLI
+        <p>Консольное приложение, созданное для этой библиотеки, обрабатывает поиковую базу в виде CSV-файла
+            и может искать текст по фиксированному столбцу.
         </p>
 
-        <p> Example of CSV-file (airports.csv) is presented. It allows to search airports by their name, town, code or its coordinates</p>
+        <p> В приложение встроен тестовый файл airports.csv, который позволяет осуществлять поиск аэропортов по
+            названию,
+            городу, коду аэропорта, его координатам.</p>
 
         <div class="link-block">
-            <a class="link" target="_blank" href="https://github.com/sinitsynme/AutocompletingLibrary">
+            <a class="link" target="_blank" href="https://github.com/sinitsynme/AutocompletingLibrary">Ссылка на
                 GitHub</a>
         </div>
 
@@ -325,7 +329,7 @@
 <div>
     <div class="page-header-container">
         <h1 id="achievements" class="page-header">
-            My achievements
+            Мои достижения
         </h1>
     </div>
 
@@ -333,7 +337,7 @@
 
     <ul>
         <li class="li-margin">
-            <p>Passed First Certificate In English exam (FCE), confirming B2 level (Upper Intermediate)</p>
+            <p>Сдал международный экзамен First Certificate In English, подтвердив уровень B2 (Upper Intermediate)</p>
         </li>
     </ul>
 
@@ -342,12 +346,13 @@
     <ul>
 
         <li class="li-margin">
-            <p>Successfully passed internship in Simbirsoft and received offer to become Java Junior
-                Developer</p>
+            <p>Прошёл стажировку в компании SimbirSoft с приглашением в компанию на должность "Java Junior
+                Developer"</p>
         </li>
 
         <li class="li-margin">
-            <p>Received grade in 'Formal verification and design of software' in Sirius University</p>
+            <p>Прошел дополнительное образование в АНО ВО "Университет Сириус" по программе "Формальная верификация и
+                дизайн программного обеспечения"</p>
         </li>
     </ul>
 
@@ -355,7 +360,8 @@
 
     <ul>
         <li class="li-margin">
-            <p>Got 2nd place at Волга-ИТ'22 Championship, track 'Java/C# applied programming'</p>
+            <p>Занял 2 место на Международной олимпиаде Волга-IT'22 по направлению "Прикладное программирование на
+                Java/C#</p>
         </li>
     </ul>
 
@@ -363,10 +369,10 @@
 
     <ul>
         <li class="li-margin">
-            <p>Finished Tinkoff course 'Algorythms and data structures' </p>
+            <p>Завершил курс "Алгоритмы и структуры данных" в Тинькофф</p>
         </li>
         <li class="li-margin">
-            <p>Received offer to become Java Software Developer at Tinkoff</p>
+            <p>Получил оффер в Тинькофф на должность Java Software Developer</p>
         </li>
     </ul>
 
@@ -393,8 +399,10 @@
 
 <script>
     function decideYearsNaming(years) {
-        if (years % 10 === 1) return "year"
-        return "years"
+        if (years % 10 === 0) return "лет"
+        if (years % 10 === 1) return "год"
+        if (years % 10 < 5) return "года"
+        return "лет"
     }
 
     let currentYear = new Date().getFullYear()
@@ -412,6 +420,4 @@
     document.querySelector('#workYears').textContent = `${workYears} ${decideYearsNaming(workYears)}`
 
 </script>
-
-
 
