--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         </p>
 
         <p class="p-margin">
-            <b>Venue:</b> <span>Samara, Russia</span>
+            <b>Residence:</b> <span>Samara, Russia</span>
         </p>
 
         <p class="p-margin"><b>Education:</b> <span>2024 - Higher, Bachelor in IT</span></p>
